second commit Tienda-XDA

--- a/assets/sass/layout/_navigation.scss
+++ b/assets/sass/layout/_navigation.scss
@@ -16,6 +16,71 @@
     }
 }
 
+.navbar__Burger {
+    float: right;
+    @include px-to-rem(47, padding-top); 
+    @include px-to-rem(30, padding-right); 
+
+    & label{
+        margin: 0 50px 0 0;
+        position: relative;
+        bottom: 20px;
+        @include px-to-rem(30);
+        @include px-to-rem(50, line-height);
+        display: none;
+        @include phone-view{
+            display: block;
+            cursor: pointer;
+        }
+    }
+}
+
+    #toggle {
+    display: none;
+    }    
+
+.navbar__Menu{
+        text-align: center;
+        width: 100%;
+        @include phone-view{
+            
+            width: 100vw;
+            max-height: 0px;
+            overflow: hidden;
+            display: flex !important;
+            flex-direction: column;
+            justify-content: flex-start;
+            background: $granitegray;
+            position: absolute;
+            left: 0;
+            top: 100px;
+            transition: all 0.3s ease-in-out;
+
+            input:checked ~ .navbar__Menu{
+            width: 100%;
+            max-height: 300px;
+            overflow: hidden;
+            display: flex !important;
+            flex-direction: column;
+            justify-content: flex-start;
+            background: $granitegray;
+            position: absolute;
+            left: 0;
+            top: 100px;
+        }
+    }
+}
+
+.navbar__Menu a{
+    @include phone-view{
+        display: block;
+        border-bottom: 1px solid $smokyblack;
+        padding-block: 7px;
+        margin: 0; 
+    }
+    
+}
+
 .navbar__Menu ul {
     list-style-type: none;
     float: right;
