--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -425,6 +425,75 @@ h3 {
   padding: 0.9375rem;
 }
 
+.navbar__Burger {
+  float: right;
+  padding-top: 47px;
+  padding-top: 2.9375rem;
+  padding-right: 30px;
+  padding-right: 1.875rem;
+}
+.navbar__Burger label {
+  margin: 0 50px 0 0;
+  position: relative;
+  bottom: 20px;
+  font-size: 30px;
+  font-size: 1.875rem;
+  line-height: 50px;
+  line-height: 3.125rem;
+  display: none;
+}
+@media (max-width: 576px) {
+  .navbar__Burger label {
+    display: block;
+    cursor: pointer;
+  }
+}
+
+#toggle {
+  display: none;
+}
+
+.navbar__Menu {
+  text-align: center;
+  width: 100%;
+}
+@media (max-width: 576px) {
+  .navbar__Menu {
+    width: 100vw;
+    max-height: 0px;
+    overflow: hidden;
+    display: flex !important;
+    flex-direction: column;
+    justify-content: flex-start;
+    background: #646266;
+    position: absolute;
+    left: 0;
+    top: 100px;
+    transition: all 0.3s ease-in-out;
+  }
+  .navbar__Menu input:checked ~ .navbar__Menu {
+    width: 100%;
+    max-height: 300px;
+    overflow: hidden;
+    display: flex !important;
+    flex-direction: column;
+    justify-content: flex-start;
+    background: #646266;
+    position: absolute;
+    left: 0;
+    top: 100px;
+  }
+}
+
+@media (max-width: 576px) {
+  .navbar__Menu a {
+    display: block;
+    border-bottom: 1px solid #0C0910;
+    padding-block: 7px;
+    margin: 0;
+  }
+}
+
 .navbar__Menu ul {
   list-style-type: none;
   float: right;
@@ -507,13 +576,13 @@ h3 {
     width: 100%;
     height: 25rem;
     object-fit: cover;
-    object-position: 5px 20%;
+    object-position: 0px 20%;
   }
 }
 @media (max-width: 576px) {
   .content__Photo img {
     height: 20rem;
-    object-position: 5px 10%;
+    object-position: 0px 10%;
   }
 }
 .content__Newsletter {
